--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
 		<h1>Time</h1>
 		<input type="time" id="time" name="time">
 		<p>
-			<a href="http://emiliocobos.net/time-pollyfill">Read more</a>
+			<a href="http://emiliocobos.net/polyfill-input-type-time/">Read more</a>
 		</p>
 	</div>
 	<script src="timepicker.js"></script>
